# di_auto

./: .gitignore  README.md  extraction.ipynb  main.py  pyproject.toml  requirements.txt  research_process.md
controllers/: __init__.py  data_processor.py  gpt_extractor.py  pdf_converter.py  schema.py
